remove stray -Xlog:gc test single call overhead